--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,6 @@
                             </div>
     
                             <!-- notification contents -->
-                            <form>
                             <div class="flex justify-center flex-center text-center">
     
                                 <div class="flex flex-col choose-upload text-center">
@@ -72,18 +71,23 @@
                                             <path d="M9 13h2v5a1 1 0 11-2 0v-5z" />
                                         </svg>
                                     </div>
-
+                                    <form action="upload" method="POST" enctype="multipart/form-data" >
+                                        {% csrf_token %}
                                     <p class="my-3 leading-6"> Upload pics or videos
                                     </p>
                                     <div uk-form-custom>
-                                        <input type="file">
-                                        <a href="#" class="button soft-warning small"> Choose file</a>
+                                        <input type="file" name="image_upload">
+                                        {% comment %} <a href="#" class="button soft-warning small"> Choose file</a> {% endcomment %}
+                                        <textarea class="button soft-warning small" name="caption" placeholder="caption..."></textarea>
+                                        <br>
+                                        <button calss="bg-blue-700" type="submit">Upload</button>
                                     </div>
     
-                                    <a href="#" class="uk-text-muted mt-3 uk-link"
+                                    {% comment %} <a href="#" class="uk-text-muted mt-3 uk-link"
                                         uk-toggle="target: .choose-upload ;  animation: uk-animation-slide-right-small, uk-animation-slide-left-medium; queued: true">
-                                        Or Import Video </a>
+                                        Or Import Video </a> {% endcomment %}
                                 </div>
+                            </form>
     
                                 <div class="uk-flex uk-flex-column choose-upload" hidden>
                                     <div class="mx-auto flex flex-col h-24 items-center justify-center relative w-full rounded-lg">
@@ -105,7 +109,6 @@
                                 </div>
     
                             </div>
-                        </form>
                             <div class="px-4 py-3 -mx-5 -mb-4 mt-5 border-t text-sm">
                                 Your Image size Must be Maxmium 999MB
                             </div>
@@ -192,6 +195,7 @@
                     <div class="space-y-5 flex-shrink-0 lg:w-7/12">
 
                         <!-- post 1-->
+                        {% for post in posts %}
                         <div class="bg-white shadow rounded-md  -mx-2 lg:mx-0">
     
                             <!-- post header-->
@@ -202,7 +206,7 @@
                                             <img src="{% static 'assets/images/avatars/avatar-2.jpg' %}" class="bg-gray-200 border border-white rounded-full w-8 h-8">
                                         </div>
                                     </a>
-                                    <span class="block capitalize font-semibold "> tomi_ml </span>
+                                    <span class="block capitalize font-semibold "><a href="#"> @{{post.user}}</a> </span>
                                 </div>
                               <div>
                                 <a href="#"> <i class="icon-feather-more-horizontal text-2xl hover:bg-gray-200 rounded-full p-2 transition -mr-1 "></i> </a>
@@ -244,8 +248,8 @@
                             </div>
     
                             <div uk-lightbox>
-                                <a href="{% static 'assets/images/post/img4.jpg' %}">  
-                                    <img src="{% static 'assets/images/post/img4.jpg' %}" alt="">
+                                <a href="{{post.image.url}}">  
+                                    <img src="{{post.image.url}}" alt="">
                                 </a>
                             </div>
                             
@@ -253,28 +257,35 @@
                             <div class="py-3 px-4 space-y-3"> 
                                
                                 <div class="flex space-x-4 lg:font-bold">
-                                    <a href="#" class="flex items-center space-x-2">
+                                    <a href="/like-post?post_id{{post.id}}" class="flex items-center space-x-2">
                                         <div class="p-2 rounded-full text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path d="M2 10.5a1.5 1.5 0 113 0v6a1.5 1.5 0 01-3 0v-6zM6 10.333v5.43a2 2 0 001.106 1.79l.05.025A4 4 0 008.943 18h5.416a2 2 0 001.962-1.608l1.2-6A2 2 0 0015.56 8H12V4a2 2 0 00-2-2 1 1 0 00-1 1v.667a4 4 0 01-.8 2.4L6.8 7.933a4 4 0 00-.8 2.4z" />
                                             </svg>
+                                            {% if post.no_of_likes == 0 %}
+                                            <p> No likes </p>
+                                            {% elif post.no_of_likes == 1%}
+                                            <p> Liked by {{post.no_of_likes}} person</p>
+                                            {% else %}
+                                             <p>Like by {{post.no_of_likes}} person</p>
+                                             {% endif  %}
                                         </div>
                                         
                                     </a>
-                                    <a href="#" class="flex items-center space-x-2">
+                                    {% comment %} <a href="#" class="flex items-center space-x-2">
                                         <div class="p-2 rounded-full text-black">
                                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" width="25" height="25" class="">
                                                 <path fill-rule="evenodd" d="M18 5v8a2 2 0 01-2 2h-5l-5 4v-4H4a2 2 0 01-2-2V5a2 2 0 012-2h12a2 2 0 012 2zM7 8H5v2h2V8zm2 0h2v2H9V8zm6 0h-2v2h2V8z" clip-rule="evenodd" />
                                             </svg>
                                         </div>
                                         
-                                    </a>
+                                    </a> {% endcomment %}
                                     <a href="#" class="flex items-center space-x-2 flex-1 justify-end">
                                         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="25" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><g fill="currentColor"><path d="M8.5 1.5A1.5 1.5 0 0 1 10 0h4a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h6c-.314.418-.5.937-.5 1.5v6h-2a.5.5 0 0 0-.354.854l2.5 2.5a.5.5 0 0 0 .708 0l2.5-2.5A.5.5 0 0 0 10.5 7.5h-2v-6z"/></g></svg>
                                         
                                     </a>
                                 </div>
-                                <div class="flex items-center space-x-3"> 
+                                {% comment %} <div class="flex items-center space-x-3"> 
                                     <div class="flex items-center">
                                         <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt="" class="w-6 h-6 rounded-full border-2 border-white ">
                                         <img src="{% static 'assets/images/avatars/avatar-4.jpg' %}" alt="" class="w-6 h-6 rounded-full border-2 border-white  -ml-2">
@@ -283,9 +294,13 @@
                                     <div class="">
                                         Liked <strong> taiye</strong> and <strong> 209 Others </strong>
                                     </div>
-                                </div>
+                                </div> {% endcomment %}
 
-                                <div class="border-t pt-4 space-y-4 ">
+                                    <p>
+                                        <a href="#"> <strong>{{post.user}}</strong></a> {{post.caption}}
+                                    </p>
+
+                                {% comment %} <div class="border-t pt-4 space-y-4 "> {% endcomment %}
                                     <div class="flex">
                                         <div class="w-10 h-10 rounded-full relative flex-shrink-0">
                                             <img src="{% static 'assets/images/avatars/avatar-1.jpg' %}" alt="" class="absolute h-full rounded-full w-full">
@@ -307,18 +322,19 @@
                                         </div>
                                     </div>
                                 </div>
-
+{% comment %} 
                                 <div class="bg-gray-100 bg-gray-100 rounded-full rounded-md relative ">
                                     <input type="text" placeholder="post a comment" class="bg-transparent max-h-10 shadow-none">
                                     <div class="absolute bottom-0 flex h-full items-center right-0 right-3 text-xl space-x-2">
                                         <a href="#"> <i class="uil-image"></i></a>
                                         <a href="#"> <i class="uil-video"></i></a>
                                     </div>
-                                </div>
+                                </div> {% endcomment %}
     
                             </div>
     
                         </div>
+                        {% endfor %}
     
                         <!-- post 2-->                       
                     
